---
source: crates/stepflow-main/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--config=tests/stepflow-config.yml"
    - "--format=json"
    - "--schemas=false"
---
success: true
exit_code: 0
----- stdout -----
{
  "components": [
    {
      "component": "/create_messages",
      "description": "Create a chat message list from system instructions and user prompt",
      "plugin": "builtin",
      "routes": [
        {
          "pathPattern": "/builtin/{*component}",
          "resolvedPath": "/builtin/create_messages",
          "conditions": [],
          "isConditional": false
        }
      ]
    },
    {
      "component": "/eval",
      "description": "Execute a nested workflow with given input and return the result",
      "plugin": "builtin",
      "routes": [
        {
          "pathPattern": "/builtin/{*component}",
          "resolvedPath": "/builtin/eval",
          "conditions": [],
          "isConditional": false
        }
      ]
    },
    {
      "component": "/get_blob",
      "description": "Retrieve JSON data from a blob using its ID",
      "plugin": "builtin",
      "routes": [
        {
          "pathPattern": "/builtin/{*component}",
          "resolvedPath": "/builtin/get_blob",
          "conditions": [],
          "isConditional": false
        }
      ]
    },
    {
      "component": "/iterate",
      "description": "Iteratively apply a workflow until it returns a result instead of next",
      "plugin": "builtin",
      "routes": [
        {
          "pathPattern": "/builtin/{*component}",
          "resolvedPath": "/builtin/iterate",
          "conditions": [],
          "isConditional": false
        }
      ]
    },
    {
      "component": "/load_file",
      "description": "Load and parse a file (JSON, YAML, or text) from the filesystem",
      "plugin": "builtin",
      "routes": [
        {
          "pathPattern": "/builtin/{*component}",
          "resolvedPath": "/builtin/load_file",
          "conditions": [],
          "isConditional": false
        }
      ]
    },
    {
      "component": "/map",
      "description": "Apply a workflow to each item in a list and collect the results",
      "plugin": "builtin",
      "routes": [
        {
          "pathPattern": "/builtin/{*component}",
          "resolvedPath": "/builtin/map",
          "conditions": [],
          "isConditional": false
        }
      ]
    },
    {
      "component": "/openai",
      "description": "Send messages to OpenAI's chat completion API and get a response",
      "plugin": "builtin",
      "routes": [
        {
          "pathPattern": "/builtin/{*component}",
          "resolvedPath": "/builtin/openai",
          "conditions": [],
          "isConditional": false
        }
      ]
    },
    {
      "component": "/put_blob",
      "description": "Store JSON data as a blob and return its content-addressable ID",
      "plugin": "builtin",
      "routes": [
        {
          "pathPattern": "/builtin/{*component}",
          "resolvedPath": "/builtin/put_blob",
          "conditions": [],
          "isConditional": false
        }
      ]
    }
  ]
}

----- stderr -----
